--- a/styles/style.css
+++ b/styles/style.css
@@ -51,3 +51,51 @@
     height: 100%;
     background-size: cover;
 }
+
+.delveHomesimg1 {
+    url()
+}
+
+.delveHomesimg2 {
+    url()
+}
+
+.delveHomesimg3 {
+    url()
+}
+
+.tariffMonopoly1 {
+    url()
+}
+
+.tariffMonopoly2 {
+    url()
+}
+
+.tariffMonopoly3 {
+    url()
+}
+
+.phishingImg1 {
+    url()
+}
+
+.phishingImg2 {
+    url()
+}
+
+.phishingImg3 {
+    url()
+}
+
+.courseraimg1 {
+    url()
+}
+
+.courseraimg2 {
+    url()
+}
+
+.courseraimg3 {
+    url()
+}
