connected the images to their classes

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,49 +53,49 @@
 }
 
 .delveHomesimg1 {
-    url()
+    background-image: url(../images/DelveHomes1.jpeg)
 }
 
 .delveHomesimg2 {
-    url()
+    background-image: url(../images/DelveHomes2.jpeg)
 }
 
 .delveHomesimg3 {
-    url()
+    background-image: url(../images/DelveHomes3.jpeg)
 }
 
 .tariffMonopoly1 {
-    url()
+    background-image: url(../images/TariffMonopoly1.jpeg)
 }
 
 .tariffMonopoly2 {
-    url()
+    background-image: url(../images/TariffMonopoly2.jpeg)
 }
 
 .tariffMonopoly3 {
-    url()
+    background-image: url(../images/TariffMonopoly3.jpeg)
 }
 
 .phishingImg1 {
-    url()
+    background-image: url(../images/Phishing1.jpeg)
 }
 
 .phishingImg2 {
-    url()
+    background-image: url(../images/Phishing2.jpeg)
 }
 
 .phishingImg3 {
-    url()
+    background-image: url(../images/Phishing3.jpeg)
 }
 
 .courseraimg1 {
-    url()
+    background-image: url(../images/Coursera1.jpeg)
 }
 
 .courseraimg2 {
-    url()
+    background-image: url(../images/Coursera2.jpeg)
 }
 
 .courseraimg3 {
-    url()
+    background-image: url(../images/Coursera3.jpeg)
 }
