--- a/styles/style.css
+++ b/styles/style.css
@@ -21,17 +21,30 @@
     height: 100%;
 }
 
+.heroSection {
+    width: 100%;
+    height: 100%;
+}
+
+.all {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .haf {
-    width: 75%;
+    width: 90%;
     height: 60vh;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 img {
     height: 100%;
     width: 100%;
+    vertical-align: bottom;
 }
 
 .imgContainer, 
@@ -41,15 +54,15 @@ img {
 }
 
 .imgContainer {
-
+    border: solid 5px black;
 }
 
 .txtContainer {
-
+    
 }
 
 .quadrant {
-    width: 50%;
+    width: 30%;
     height: 60vh;
     display: flex;
     flex-direction: column;
@@ -95,6 +108,13 @@ img {
     height: 25px;
     background-color: white;
     border: solid 5px black;
+}
+
+.me {
+    background-image: url(../images/Mark.JPG);
+    width: 30px;
+    height: 30px;
+    background-size: cover;
 }
 
 .delveHomesImg1 {
