--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,20 @@
 .heroSection {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heroSection > p {
+    font-size: 24px;
+    width: 50%;
+    margin-top: 60px;
+}
+
+h2 {
+    text-align: center;
+    font-size: 52px;
 }
 
 .all {
@@ -112,9 +126,11 @@ img {
 
 .me {
     background-image: url(../images/Mark.JPG);
-    width: 30px;
-    height: 30px;
+    width: 30vw;
+    height: 100vh;
     background-size: cover;
+    border: solid 15px black;
+    box-shadow: 5px 10px 40px 20px rgb(255, 221, 0);;
 }
 
 .delveHomesImg1 {
