--- a/styles/style.css
+++ b/styles/style.css
@@ -118,10 +118,15 @@ img {
 
 .dButton, 
 .iButton {
-    width: 25px;
-    height: 25px;
+    width: 5vh;
+    height: 5vh;
     background-color: white;
-    border: solid 5px black;
+    border: solid 4px black;
+    border-radius: 100px;
+    /* font-size: 45px; */
+    font-size: 4.3vh;
+    text-align: center;
+    user-select: none;
 }
 
 .me {
@@ -130,7 +135,7 @@ img {
     height: 100vh;
     background-size: cover;
     border: solid 15px black;
-    box-shadow: 5px 10px 40px 20px rgb(255, 221, 0);;
+    box-shadow: 5px 10px 40px 20px rgb(82, 82, 82);
 }
 
 .delveHomesImg1 {
