--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ h2 {
 
 .haf {
     width: 90%;
-    height: 60vh;
+    height: 60%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -73,6 +73,7 @@ img {
 
 .txtContainer {
     visibility: visible;
+    overflow-y: auto;
 }
 
 .quadrant {
@@ -231,6 +232,7 @@ img {
     left: 0;
     background-color: rgba(0,0,0, 0.9);
     overflow-x: hidden;
+    overflow-y: hidden;
     transition: 0.5s;
     display: flex;
     align-items: center;
@@ -262,4 +264,18 @@ img {
     cursor: pointer;
     position: absolute;
     user-select: none;
+}
+
+/* SPLIT: mobile compatability */
+
+@media only screen and (max-width:768px) {
+    .haf {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .quadrant {
+        width: 75%;
+        margin-top: 5vh;
+    }
 }
