--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,8 @@
     flex-direction: column;
 }
 
+/* SPLIT: HOME PAGE AND PROJECT PAGES */
+
 .tMImg,
 .cImg,
 .pImg,
@@ -264,6 +266,30 @@ img {
     cursor: pointer;
     position: absolute;
     user-select: none;
+}
+
+/* SPLIT: RESUME PAGE STUFF */
+
+h3 {
+    text-align: center;
+    font-size: 42px;
+}
+
+h4 {
+    font-size: 28px;
+    display: flex;
+}
+
+.resumeSection {
+    height: fit-content;
+    width: 75%;
+    display: flex;
+    align-items: center;
+    flex-direction: column
+}
+
+ul {
+    ;
 }
 
 /* SPLIT: mobile compatability */
