--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 .row {
@@ -11,6 +12,14 @@
 .col {
     display: flex;
     flex-direction: column;
+}
+
+footer {
+    /* align-items: flex-end; */
+}
+
+body {
+    background-color: rgb(19, 62, 80);
 }
 
 /* SPLIT: HOME PAGE AND PROJECT PAGES */
@@ -37,7 +46,7 @@
     margin-top: 60px;
 }
 
-h2 {
+.resume {
     text-align: center;
     font-size: 52px;
 }
@@ -217,7 +226,7 @@ img {
 /* SPLIT: NAVIGATION STUFF */
 
 .openButton {
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     top: 1%;
     left: 1%;
@@ -230,7 +239,7 @@ img {
     height: 0;
     width: 100%;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     top: 0;
     left: 0;
     background-color: rgba(0,0,0, 0.9);
@@ -289,7 +298,7 @@ h4 {
     flex-direction: column
 }
 
-ul {
+.resumeList {
     
 }
 
@@ -305,4 +314,90 @@ ul {
         width: 75%;
         margin-top: 5vh;
     }
+}
+
+/* SPLIT: ABOUT PAGE */
+
+.aboutHeader {
+    font-size: 50px;
+}
+
+.aboutList > li {
+    font-size: 36px;
+}
+
+.aboutList {
+    margin-left: 10%;
+}
+
+.aboutSection1,
+.aboutSection2,
+.aboutSection3 {
+    background-color: rgb(4, 38, 50);
+    width: 20vw;
+    border-radius: 20px;
+    padding: 5px;
+    margin-left: 10vw;
+    /* margin-top: 5%; */
+    cursor: pointer;
+    color: white;
+    border: solid black 3px;
+}
+
+.aboutSection4,
+.aboutSection5,
+.aboutSection6 {
+    background-color: rgb(38, 103, 146);
+    padding: 1%;
+    border-radius: 20px;
+    font-size: 36px;
+    width: 50vw;
+    border: solid black 3px;   
+}
+
+.aboutSection1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.aboutSection1 {
+    position: absolute;
+    left: 0;
+}
+
+.aboutSection1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.aboutSection1 {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.aboutSection1 {
+    position: absolute;
+    right: 0;
+}
+
+.aboutSection1 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.aboutContent {
+    position: relative;
+    width: 90vh;
+    height: 90vh;
+}
+
+.sectionMain {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
