FIX THE ARROOOOOWS

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+}
+
+p, a, h1, h2, h3, h4, h5, h6 {
     color: white;
+}
+
+b {
+    color: black
 }
 
 .row {
@@ -368,3 +375,6 @@ h4 {
 
 /* SPLIT: ABOUT PAGE */
 
+b {
+    color: black;
+}
