--- a/styles/style.css
+++ b/styles/style.css
@@ -274,7 +274,8 @@ img {
     width: 50%;
     background-color: rgb(18, 33, 47);
     margin-left: 25%;
-    margin-top: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     font-size: 64px;
     text-align: center;
     border-radius: 30px;
