--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,22 @@ body {
 
 /* SPLIT: HOME PAGE AND PROJECT PAGES */
 
+.meme {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.meTextContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.meText {
+    font-size: 86px;
+}
+
 .tMImg,
 .cImg,
 .pImg,
@@ -65,10 +81,10 @@ h2 {
     margin-top: 60px;
 }
 
-.resume {
+/* .resume {
     text-align: center;
     font-size: 52px;
-}
+} */
 
 .all {
     width: 100%;
@@ -338,26 +354,77 @@ img {
 
 /* SPLIT: RESUME PAGE STUFF */
 
+.resume {
+    font-size: 100px;
+}
+
 h3 {
     text-align: center;
-    font-size: 42px;
+    font-size: 62px;
 }
 
 h4 {
-    font-size: 28px;
-    display: flex;
+    font-size: 42px;
+}
+
+h5 {
+    font-size: 32px;
+}
+
+h4, h5, .resumeList {
+    margin-bottom: 1vh;
 }
 
 .resumeSection {
     height: fit-content;
     width: 75%;
     display: flex;
-    align-items: center;
-    flex-direction: column
+    /* align-items: center; */
+    flex-direction: column;
+    background-color: rgb(11, 6, 45);
+    width: 50%;
+    border: rgb(79, 79, 79) 7px solid;
+    border-radius: 30px;
+    padding: 1%;
+    margin: 25px;
 }
 
 .resumeList {
-    
+    margin-left: 5%;
+    font-size: 28px;
+}
+
+.resumeContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.PDFcontainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1%;
+}
+
+.PDFsection {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.PDFthingy {
+    background-color: black;
+    border: solid white 5px;
+    font-size: 28px;
+    padding: 1%;
+    /* display: flex; */
+    flex-direction: row;
+    /* justify-content: center; */
+    border-radius: 10px;
 }
 
 /* SPLIT: mobile compatability */
@@ -376,90 +443,24 @@ h4 {
 
 /* SPLIT: ABOUT PAGE */
 
-b {
-    color: black;
-}
-
-.aboutHeader {
-    font-size: 50px;
-}
-
-.aboutList > li {
-    font-size: 36px;
-}
-
-.aboutList {
-    margin-left: 10%;
-}
-
-.aboutSection1,
-.aboutSection2,
-.aboutSection3 {
-    background-color: rgb(4, 38, 50);
-    width: 20vw;
-    border-radius: 20px;
-    padding: 5px;
-    margin-left: 10vw;
-    /* margin-top: 5%; */
-    cursor: pointer;
-    color: white;
-    border: solid black 3px;
-}
-
-.aboutSection4,
-.aboutSection5,
-.aboutSection6 {
-    background-color: rgb(38, 103, 146);
-    padding: 1%;
-    border-radius: 20px;
-    font-size: 36px;
-    width: 50vw;
-    border: solid black 3px;   
-}
-
-.aboutSection1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.aboutSection1 {
-    position: absolute;
-    left: 0;
-}
-
-.aboutSection1 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.aboutSection1 {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.aboutSection1 {
-    position: absolute;
-    right: 0;
-}
-
-.aboutSection1 {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-
 .aboutContent {
-    position: relative;
-    width: 90vh;
-    height: 90vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.sectionMain {
+.aboutRow {
     display: flex;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 28px;
+}
+
+.aboutLeft {
+    background-color: rgb(11, 15, 66);
+}
+
+.aboutRight1,
+.aboutRight2, 
+.aboutRight3 {
+    background-color: rgb(17, 102, 120);
 }
