fitted the HTML and CSS files to be compatible with the new compressed images

--- a/styles/style.css
+++ b/styles/style.css
@@ -216,73 +216,73 @@ img {
 }
 
 .delveHomesImg1 {
-    background-image: url(../images/DelveHomes1.jpeg);
+    background-image: url(../images/DelveHomes1.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .delveHomesImg2 {
-    background-image: url(../images/DelveHomes2.jpeg);
+    background-image: url(../images/DelveHomes2.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .delveHomesImg3 {
-    background-image: url(../images/DelveHomes3.jpeg);
+    background-image: url(../images/DelveHomes3.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .tariffMonopoly1 {
-    background-image: url(../images/TariffMonopoly1.jpeg);
+    background-image: url(../images/TariffMonopoly1.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .tariffMonopoly2 {
-    background-image: url(../images/TariffMonopoly2.jpeg);
+    background-image: url(../images/TariffMonopoly2.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .tariffMonopoly3 {
-    background-image: url(../images/TariffMonopoly3.jpeg);
+    background-image: url(../images/TariffMonopoly3.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .phishingImg1 {
-    background-image: url(../images/Phishing1.jpeg);
+    background-image: url(../images/Phishing1.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .phishingImg2 {
-    background-image: url(../images/Phishing2.jpeg);
+    background-image: url(../images/Phishing2.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .phishingImg3 {
-    background-image: url(../images/Phishing3.jpeg);
+    background-image: url(../images/Phishing3.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .courseraImg1 {
-    background-image: url(../images/Coursera1.jpeg);
+    background-image: url(../images/Coursera1.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .courseraImg2 {
-    background-image: url(../images/Coursera2.jpeg);
+    background-image: url(../images/Coursera2.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
 
 .courseraImg3 {
-    background-image: url(../images/Coursera3.jpeg);
+    background-image: url(../images/Coursera3.jpg);
     /* animation-name: fade;
     animation-duration: 1s; */
 }
